deployment-scripts/apis-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: otp-apis
  labels:
    app: flask
spec:
  selector:
    matchLabels:
      app: flask
  template:
    metadata:
      labels:
        app: flask
    spec:
      containers:
      - name: otp-apis
        image: manojjahgirdar/otp-apis:v4
        ports:
        - containerPort: 8080
