deployment-scripts/webapp-deployment.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: otp-webapp
  labels:
    app: nodejs
spec:
  selector:
    matchLabels:
      app: nodejs
  template:
    metadata:
      labels:
        app: nodejs
    spec:
      containers:
      - name: otp-webapp
        image: manojjahgirdar/otp-webapp:v3
        ports:
        - containerPort: 8080
