deployment-scripts/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otp-apis-service
spec:
  selector:
    app: flask
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32020
  type: NodePort
