deployment-scripts/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: otp-webapp-service
spec:
  selector:
    app: nodejs
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 32000
  type: NodePort
