deployment-scripts/apis-route.yaml
apiVersion: ingress.openshift.io/v1
kind: Ingress
metadata:
  name: otp-apis-url
  namespace: default
spec:
  path: /
  to:
    kind: Service
    name: otp-apis-service
  port:
    targetPort: 8080
