deployment-scripts/otp-apis-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: otp-apis-route
  namespace: default
spec:
  path: /
  to:
    kind: Service
    name: otp-apis-service
  port:
    targetPort: 8080
