deployment-scripts/webapp-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: otp-webapp-url
  namespace: default
spec:
  path: /
  to:
    kind: Service
    name: otp-webapp-service
  port:
    targetPort: 8080
